# infino

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.devcontainer/: devcontainer.dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-and-test.yml  post-merge-ci.yml
benches/: Cargo.toml  README.md  output.txt
benches/config/: default.toml
benches/src/: main.rs
benches/src/engine/: clickhouse.rs  elasticsearch.rs  es.rs  es.rs.one-batch  infino.rs  infino_rest.rs  mod.rs  tantivy.rs
benches/src/logs/: clickhouse.rs  es.rs  infino.rs  infino_os_rest.rs  infino_rest.rs  mod.rs  os.rs
benches/src/metrics/: infino.rs  mod.rs  prometheus.rs
benches/src/timeseries/: infino.rs  prometheus.rs
benches/src/utils/: io.rs  mod.rs
clients/infinopy/: .gitignore  Makefile  README.md  requirements.in  requirements.txt
clients/infinopy/infinopy/: __init__.py  client.py
clients/infinopy/tests/: test_base_url.py  test_client.py
clients/python/: Makefile
clients/python/infino/: .gitignore  client.py
clients/python/infino/tests/: test_infino.py
clients/python/infinopy/: Makefile
clients/python/infinopy/tests/: test_client.py
config/: default.toml
coredb/: Cargo.toml  Makefile  README.md  env-vars.md  lib.rs
coredb/config/: default.toml
coredb/src/: lib.rs
coredb/src/index_manager/: index.rs  metadata.rs  mod.rs  promql.rs  promql_grammar.pest  promql_object.rs  promql_time_series.rs  promql_vector.rs  segment_summary.rs
coredb/src/log/: constants.rs  inverted_map.rs  log_message.rs  mod.rs  postings_block.rs  postings_block_compressed.rs  postings_list.rs
coredb/src/metric/: constants.rs  metric_point.rs  metricutils.rs  mod.rs  time_series.rs  time_series_block.rs  time_series_block_compressed.rs  time_series_map.rs
coredb/src/policy_manager/: merge_policy.rs  mod.rs  retention_policy.rs
coredb/src/request_manager/: log_message.rs  lucene_grammar.pest  lucene_query.rs  mod.rs  opensearch_index_grammar.pest  promql.rs  promql_object.rs  promql_time_series.rs  query_dsl.rs  query_dsl_grammar.pest  query_dsl_object.rs  time_series.rs
coredb/src/segment_manager/: inverted_map.rs  metadata.rs  mod.rs  query_dsl.rs  query_dsl_grammar.pest  search.rs  search_logs.rs  search_metrics.rs  segment.rs  wal.rs
coredb/src/storage_manager/: aws_s3_utils.rs  azure_storage_utils.rs  constants.rs  gcp_storage_utils.rs  mod.rs  storage.rs
coredb/src/ts/: metric_point.rs  mod.rs  time_series.rs  time_series_block.rs  time_series_block_compressed.rs  tsutils.rs
coredb/src/utils/: atomic_vector.rs  config.rs  constants.rs  custom_serde.rs  environment.rs  error.rs  io.rs  mod.rs  range.rs  request.rs  serialize.rs  sync.rs  time.rs  tokenize.rs  trie.rs
coredb/tests/: loom.rs
dashboard/: Makefile  README.md  requirements.in  requirements.txt
dashboard/config/: default.toml
dashboard/src/: driver.py  error_log_dashboard.py  example_log_dashboard.py  example_logs_dashboard.py  example_metrics_dashboard.py
dashboard/src/util/: toml_util.py  yaml.py
dashboard/tests/: test_example_dashboards.py  test_example_log_dashboard.py  test_logs_dashboard.py
docker/: Dockerfile  docker-build.sh  docker-compose.yml  dockerbuild.sh  infino-opensearch.dockerfile  opensearch-infino.dockerfile
docs/: DevContainer.md  architecture.md  infino-docker-compose.md
docs/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/doc/coredb/: all.html  index.html  sidebar-items.js  struct.CoreDB.html
docs/doc/coredb/index_manager/: index.html  sidebar-items.js
docs/doc/coredb/log/: index.html  sidebar-items.js
docs/doc/coredb/metric/: index.html  sidebar-items.js
docs/doc/coredb/segment_manager/: index.html  sidebar-items.js
docs/doc/coredb/utils/: index.html  sidebar-items.js
docs/doc/implementors/lazy_static/: trait.LazyStatic.js
docs/doc/infino/: all.html  fn.app.html  fn.append_log.html  fn.append_metric.html  fn.append_ts.html  fn.commit_in_loop.html  fn.create_index.html  fn.delete_index.html  fn.flush.html  fn.get_index_dir.html  fn.get_timestamp.html  fn.main.html  fn.parse_json.html  fn.ping.html  fn.search_log.html  fn.search_logs.html  fn.search_metrics.html  fn.search_ts.html  fn.summarize.html  index.html  sidebar-items.js  struct.AppState.html  struct.LogsQuery.html  struct.MetricsQuery.html  struct.SummarizeQuery.html  struct.SummarizeQueryResponse.html
docs/doc/infino/queue_manager/: index.html
examples/datasets/: stanford-qa-subset.txt
examples/fluentbit/: README.md  apache-log.conf  time-series-cpu.conf
examples/llm-monitoring-langchain/: llm-monitoring-langchain.ipynb
examples/llm-monitoring-openai/: llm-monitoring-openai.ipynb
examples/python-client/: rally-tracks.ipynb
examples/rust-apache-logs/: Cargo.toml
examples/rust-apache-logs/src/: main.rs
infino-opensearch-plugin/: MAINTAINERS.md  build.gradle
plugins/infino-opensearch-plugin/: CONTRIBUTING.md  NOTICE.txt  README.md  build-all-versions.sh  build.gradle  settings.gradle
plugins/infino-opensearch-plugin/.github/: CODEOWNERS
scripts/: build-docker-multiarch.sh
server/: Cargo.toml  test_output.txt
server/src/: background_threads.rs  commit.rs  main.rs
server/src/queue_manager/: mod.rs  queue.rs
server/src/utils/: constants.rs  docker.rs  error.rs  mod.rs  openai_helper.rs  settings.rs  shutdown.rs  test_with_env_vars.rs
server/tests/: startup.rs
src/: main.rs
src/queue_manager/: queue.rs
src/utils/: environment.rs  mod.rs  openai_helper.rs  settings.rs
tsldb/: Cargo.toml  Makefile
tsldb/config/: default.toml
tsldb/src/: lib.rs
tsldb/src/index_manager/: index.rs  metadata.rs
tsldb/src/log/: log_message.rs  postings_block.rs  postings_block_compressed.rs  postings_list.rs
tsldb/src/segment_manager/: metadata.rs  segment.rs
tsldb/src/ts/: time_series.rs  time_series_block.rs  time_series_block_compressed.rs  tsutils.rs
tsldb/src/utils/: config.rs  error.rs  mod.rs  serialize.rs  tokenize.rs
tsldb/tests/: loom.rs
(+237 files in other folders)
