[workspace]
members = [
    "server", "coredb", "examples/rust-apache-logs"
]
exclude = [
    "benches"
]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false

[profile.test]
debug-assertions = true
overflow-checks = true

# Custom profile for using in dhat memory profiling tool. We optimize similar to release,
# but enable the debug info. 
[profile.dhat]
inherits = "release"
opt-level = 3
debug = true
debug-assertions = true
