[package]
name = "benches"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "*"
clickhouse = "*"
elasticsearch = "8.7.0-alpha.1"
fs_extra = "1.2.0"
serde = { version = "~1", features = ["derive"]}
serde_json = "~1"
tokio = { version = "*", features = ["full"] }
url = "2.3.1"
uuid = "1.2.2"
tantivy = "0.21.0"
tempfile = "*"
tempdir = "*"
prometheus = "0.13.3"
warp = "*"
sysinfo = "0.29.10"
reqwest = "0.11.17"

[dependencies.tsldb]
path = "../tsldb"

[dependencies.async-std]
version = "1.9.0"
features = ["attributes"]

[dev-dependencies]
clickhouse = { version = "*", features = ["test-util"] }
