[package]
name = "benches"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "*"
clickhouse = "*"
elasticsearch = "8.5.0-alpha.1"
fs_extra = "1.2.0"
serde = { version = "~1", features = ["derive"]}
serde_json = "~1"
tokio = { version = "*", features = ["full"] }
url = "2.3.1"
uuid = "1.2.2"
reqwest = "0.11.17"
structopt = "0.3.26"
tantivy = "0.19.2"
tempfile = "*"
tempdir = "*"
prometheus = "0.13.3"
warp = "*"

# Sysinfo API has changed beyond this version. Do not upgrade without the corresponding changes in the code.
sysinfo = "0.17.3"

[dependencies.coredb]
path = "../coredb"

[dependencies.async-std]
version = "1.9.0"
features = ["attributes"]

[dev-dependencies]
clickhouse = { version = "*", features = ["test-util"] }

[profile.release]
debug = true
