[package]
name = "coredb"
version = "0.1.0"
edition = "2021"

[dependencies]
bitpacking = "0.8.4"
chrono = "0.4.23"
config = "0.13.1"
crossbeam = "0.8.2"
dashmap = { version = "5.4.0", features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4"
memmap2 = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tsz = "0.1.4"
unicode-segmentation = "1.10.1"
zstd = "0.13.0"

[dev-dependencies]
env_logger = "*"
rand = "*"
tempfile = "*"
tempdir = "*"
test-case = "*"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7.1" }
