[package]
name = "infino"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["macros"] }
cfg-if = "1.0"
chrono = "0.4.31"
config = "0.14.0"
coredb = { path = "../coredb" }
dhat = "0.3.2"
env_logger = "0.11.2"
hyper = { version = "1.1.0", features = ["full"] }
lapin = "2.3.1"
lazy_static = "1"
log = "0.4.19"
mime = "0.3.16"
num_cpus = "1.13"
openai-api-rs = "4.0.1"
rabbitmq-stream-client = { git = "https://github.com/rabbitmq/rabbitmq-stream-rust-client", rev = "203d1a11fb29665e9385741df89b325a1deb3bff" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-executor = "0.1.10"
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
tokio-retry = "0.3"
tokio-stream = "0.1.14"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
assert_cmd = "*"
cmd_lib = "*"
mockall = "*"
tower = { version = "*", features = ["util"] }
tempdir = "*"
test-case = "*"
urlencoding = "*"

[features]
dhat-heap = []    # if you are doing heap profiling
