[package]
name = "rust-apache-logs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.4.18"
chrono = "0.4"
coredb = { path = "../../coredb" }
dhat = "0.3.2"
reqwest = "0.11.23"
serde = { version = "~1", features = ["derive"]}
serde_json = "~1"
tokio = { version = "1", features = ["full"] }

[profile.release]
debug = 1

[features]
dhat-heap = []    # if you are doing heap profiling using --coredb_only option
